--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,24 @@
 cmake_minimum_required(VERSION 3.0.0)
 
-project(server-control)
+project(seco)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS on)
-
-include(cmake/wall.cmake)
-
-if (SERVER_CONTROL_ENABLE_ASAN)
-  include(cmake/asan.cmake)
-endif()
 
 find_package(docopt COMPONENTS CXX REQUIRED)
 find_package(Threads)
 include_directories(${DOCOPT_INCLUDE_DIRS})
 
-set(SRC
-    main.cpp
-    servercontrol.cpp
-)
-list(TRANSFORM SRC PREPEND src/)
+set(WARNING_FLAGS -Wall -Wextra -pedantic -Werror)
 
-add_executable(server-control ${SRC})
-target_include_directories(server-control PUBLIC include)
-target_link_libraries(server-control docopt_s)
-target_link_libraries (server-control Threads::Threads)
-set_wall(server-control)
+add_library(seco src/seco.cpp)
+target_include_directories(seco PRIVATE include)
+target_link_libraries (seco Threads::Threads)
+target_compile_options(seco PRIVATE ${WARNING_FLAGS})
+
+add_executable(example src/main.cpp)
+target_include_directories(example PRIVATE include)
+target_link_libraries (example Threads::Threads)
+target_link_libraries(example docopt_s)
+target_link_libraries(example seco)
+target_compile_options(example PRIVATE ${WARNING_FLAGS})
